Changed responsiveness issues with experience page and projects page on mobile view

--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -239,7 +239,7 @@ hr {
 
     .sub-title {
         margin-top: -8px;
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .tools {
