--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -263,7 +263,7 @@ hr {
 
     .sub-title {
         margin-top: -8px;
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .row-text {
